[ci skip] 49361145651 https://github.com/tkoyama010/scientific-python-lectures-translations/actions/runs/17389565268/job/49361145651

--- a/locales/ja/LC_MESSAGES/advanced.po
+++ b/locales/ja/LC_MESSAGES/advanced.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Scientific Python Lectures 2025.1rc0.dev0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-08-31 00:15+0000\n"
+"POT-Creation-Date: 2025-09-02 00:13+0000\n"
 "PO-Revision-Date: 2024-11-27 19:15+0000\n"
 "Last-Translator: Tetsuo Koyama <tkoyama010@gmail.com>, 2025\n"
 "Language-Team: Japanese (https://app.transifex.com/tkoyama010/teams/202028/ja/)\n"
@@ -269,7 +269,7 @@ msgstr "高度なNumPy"
 
 #: ../../scientific-python-lectures/advanced/advanced_numpy/index.rst:13
 msgid "**Author**: *Pauli Virtanen*"
-msgstr ""
+msgstr "**著者**: *Pauli Virtanen*"
 
 #: ../../scientific-python-lectures/advanced/advanced_numpy/index.rst:15
 msgid ""
@@ -341,7 +341,7 @@ msgstr ""
 
 #: ../../scientific-python-lectures/advanced/advanced_numpy/index.rst:54
 msgid "Life of ndarray"
-msgstr ""
+msgstr "ndarrayのライフサイクル"
 
 #: ../../scientific-python-lectures/advanced/advanced_numpy/index.rst:57
 msgid "It's..."
@@ -480,7 +480,7 @@ msgstr "chunk_id"
 
 #: ../../scientific-python-lectures/advanced/advanced_numpy/index.rst:181
 msgid "``\"RIFF\"``"
-msgstr ""
+msgstr "``\"RIFF\"``"
 
 #: ../../scientific-python-lectures/advanced/advanced_numpy/index.rst:182
 msgid "chunk_size"
