--- a/locales/ja/LC_MESSAGES/intro.po
+++ b/locales/ja/LC_MESSAGES/intro.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Scientific Python Lectures 2025.1rc0.dev0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-09-22 00:15+0000\n"
+"POT-Creation-Date: 2025-09-23 00:52+0000\n"
 "PO-Revision-Date: 2024-11-27 19:15+0000\n"
 "Last-Translator: Tetsuo Koyama <tkoyama010@gmail.com>, 2025\n"
 "Language-Team: Japanese (https://app.transifex.com/tkoyama010/teams/202028/ja/)\n"
@@ -1347,7 +1347,7 @@ msgstr ""
 
 #: ../../scientific-python-lectures/intro/language/exceptions.rst:2
 msgid "Exception handling in Python"
-msgstr ""
+msgstr "Pythonにおける例外処理"
 
 #: ../../scientific-python-lectures/intro/language/exceptions.rst:4
 msgid ""
