--- a/locales/ja/LC_MESSAGES/guide.po
+++ b/locales/ja/LC_MESSAGES/guide.po
@@ -4,16 +4,16 @@
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
 # Translators:
-# Tetsuo Koyama <tkoyama010@gmail.com>, 2025
+# Tetsuo Koyama <tkoyama010@gmail.com>, 2026
 # 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Scientific Python Lectures 2025.1rc0.dev0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2026-01-02 07:35+0000\n"
+"POT-Creation-Date: 2026-01-05 00:17+0000\n"
 "PO-Revision-Date: 2024-11-27 19:15+0000\n"
-"Last-Translator: Tetsuo Koyama <tkoyama010@gmail.com>, 2025\n"
+"Last-Translator: Tetsuo Koyama <tkoyama010@gmail.com>, 2026\n"
 "Language-Team: Japanese (https://app.transifex.com/tkoyama010/teams/202028/ja/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -31,7 +31,7 @@ msgstr "すべてのexampleディレクトリにはREADME.txtが必要です。"
 
 #: ../../scientific-python-lectures/guide/auto_examples/index.rst:25
 msgid ":doc:`/guide/auto_examples/plot_simple`"
-msgstr ""
+msgstr ":doc:`/guide/auto_examples/plot_simple`"
 
 #: ../../scientific-python-lectures/guide/auto_examples/index.rst:52
 msgid ""
